Delete an (expensive) unused code path to draw window backgrounds.

Any view that implements drawRect: and/or sets needsDisplay on itself
gets a view-sized backing store. This was costing ~100MB per large
window on my MBP, and nothing was using it: 10.9 is no longer supported
and menu backgrounds are no longer blurred (and if they were, it'd be a
different way).

Bug: 832197
Change-Id: I2aeaa53a19c12f23a2e05d33883eabf76e318f1c
Reviewed-on: https://chromium-review.googlesource.com/1011022
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Commit-Queue: Sidney San Martín <sdy@chromium.org>
Cr-Commit-Position: refs/heads/master@{#550429}
Former-commit-id: 9d18ebb63085f1278540a0d1970be93be2a6265d